fixed first input button being too small, after previous button

--- a/styles/input.module.scss
+++ b/styles/input.module.scss
@@ -2,6 +2,7 @@
 
 .text-input {
     @include pill;
+    width: 100%;
 
     &:focus {
         background-color: white;
